[gd_scene load_steps=6 format=1]

[ext_resource path="res://Scripts/Projectiles/LeafShield.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Projectiles/LeafShieldProj.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/SFX/wav/leafshield.wav" type="Sample" id=3]

[sub_resource type="Animation" id=1]

resource/name = "death"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }

[sub_resource type="SampleLibrary" id=2]

samples/leafshield = { "db":0.0, "pitch":1.0, "sample":ExtResource( 3 ) }

[node name="LeafShield" type="KinematicBody2D"]

transform/scale = Vector2( 1.5, 1.5 )
input/pickable = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="LeafShieldProj1" parent="." instance=ExtResource( 2 )]

[node name="LeafShieldProj2" parent="." instance=ExtResource( 2 )]

[node name="LeafShieldProj3" parent="." instance=ExtResource( 2 )]

[node name="LeafShieldProj4" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/death = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="SFX" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 2 )
config/pitch_random = 0.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


